--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -904,29 +904,118 @@ items:
     
     - name: Modernize
       items:
-      - name: Overview (PLACEHOLDER)
+      - name: Overview (DRAFT)
         href: modernize/index.md
       - name: Envision cloud modernization (DRAFT)
         href: modernize/envision-cloud-modernization.md
       - name: Evaluate modernization options (DRAFT)
         href: modernize/evaluate-modernization-options.md
-      - name: Modernization economics (DRAFT)
-        href: modernize/modernization-economics.md
       - name: Complex evaluations (DRAFT)
-        href: modernize/complex-evaluations.md  
-      - name: Modernization effort (DRAFT)
-        href: modernize/modernization-effort.md
-      - name: Modernization impact (DRAFT)
-        href: modernize/modernization-impact.md
-      - name: Modernization commitment (DRAFT)
-        href: modernize/modernization-commitment.md
+        href: complex-evaluations.md
+      - name: Commit to modernization plan (DRAFT)
+        href: modernize/commit-to-modernization-plan.md
+      - name: Modernization disciplines (DRAFT)
+        href: modernization-disciplines.md
+      - name: Application platform modernization (DRAFT)
+        href: application-platform-modernization.md
+      - name: Deploy application platforms (DRAFT)
+        href: deploy-application-platforms.md
+      - name: Best practices
+        items: 
+        - name: Data platform modernization (DRAFT)
+          href: modernize/modernize-best-practices/data-platform-modernizations.md   
+        - name: DevOps practices (DRAFT)
+          href: modernize/modernize-best-practices/devops-practices.md
       - name: Modernize examples 
         items:
         - name: Refactor an on-premises apps
           href: migrate/azure-best-practices/contoso-migration-refactor-web-app-sql-managed-instance.md
         - name: Refactor a Linux app
           href: migrate/azure-best-practices/contoso-migration-refactor-linux-app-service-mysql.md
-
+        - name: Azure Database Migration Guide
+          items:
+            - name: Refactor SQL Server to Azure SQL Database
+              href: /data-migration/
+            - name: Refactor SQL Server to Azure SQL Managed Instance
+              href: /data-migration/
+            - name: Refactor SQL Server to SQL Server on Azure VMs
+              href: /data-migration/
+            - name: Refactor SQL Server to Azure SQL Data Warehouse
+              href: /data-migration/
+            - name: MySQL
+              items:
+              - name: Refactor MySQL to Azure SQL Database
+                href: /data-migration/
+              - name: Refactor MySQL to Azure Database for MySQL
+                href: /data-migration/
+            - name: PostgreSQL
+              items:
+              - name: Refactor PostgreSQL to Azure Database for PostgreSQL
+                href: /data-migration/
+            - name: MariaDB
+              items:
+              - name: Refactor MariaDB to Azure Database for MariaDB
+                href: /data-migration/
+            - name: MongoDB
+              items:
+              - name: Refactor MongoDB to Azure Cosmos DB
+                href: /data-migration/
+            - name: Cassandra
+              items:
+              - name: Refactor Cassandra to Azure Cosmos DB
+                href: /data-migration/
+            - name: Oracle
+              items:
+              - name: Refactor Oracle to Azure SQL Database
+                href: /data-migration/
+              - name: Refactor Oracle to Azure Database for PostgreSQL
+                href: /data-migration/
+              - name: Rearchitect Oracle to Azure SQL Data Warehouse
+                href: /data-migration/
+            - name: DB2
+              items:
+              - name: Refactor DB2 to Azure SQL Database
+                href: /data-migration/
+            - name: SAP ASE
+              items:
+              - name: Refactor SAP ASE to Azure SQL Database
+                href: /data-migration/
+            - name: Access
+              items:
+              - name: Refactor Access database to Azure SQL Database
+                href: /data-migration/
+            - name: Azure Database Migration Service tutorials
+              items:
+            - name: Azure Database Migration Service overview
+              href: /azure/dms/dms-overview?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/toc.json
+            - name: Migrate SQL Server to Azure SQL Database offline
+              href: /azure/dms/tutorial-sql-server-to-azure-sql?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/toc.json
+            - name: Migrate SQL Server to Azure SQL Database online
+              href: /azure/dms/tutorial-sql-server-to-azure-sql?toc=/azure/cloud-adoption-framework/toc.json&bc=/azure/cloud-adoption-framework/_bread/toc.json
+            - name: Migrate SQL Server to Azure SQL Managed Instance offline
+              href: /azure/dms/tutorial-sql-server-to-managed-instance?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/toc.json
+            - name: Migrate SQL Server to Azure SQL Managed Instance online
+              href: /azure/dms/tutorial-sql-server-managed-instance-online?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/toc.json
+            - name: Migrate Amazon RDS SQL Server to Azure SQL Database or Azure SQL Managed Instance online
+              href: /azure/dms/?toc=/azure/cloud-adoption-framework/toc.json&bc=/azure/cloud-adoption-framework/_bread/toc.json
+            - name: Migrate MySQL to Azure Database for MySQL online
+              href: /azure/dms/tutorial-mysql-azure-mysql-offline-portal?toc=/azure/cloud-adoption-framework/toc.json&bc=/azure/cloud-adoption-framework/_bread/toc.json
+            - name: Migrate Amazon RDS MySQL to Azure Database for MySQL online
+              href: /azure/dms/tutorial-mysql-azure-mysql-offline-portal?toc=/azure/cloud-adoption-framework/toc.json&bc=/azure/cloud-adoption-framework/_bread/toc.json
+            - name: Migrate PostgreSQL to Azure Database for PostgreSQL online
+              href: /azure/dms/tutorial-postgresql-azure-postgresql-online?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/toc.json
+            - name: Migrate Amazon RDS PostgreSQL to Azure Database for PostgreSQL online
+              href: /azure/dms/tutorial-rds-postgresql-server-azure-db-for-postgresql-online?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/toc.json
+            - name: Migrate MongoDB to Azure Cosmos DB's API for MongoDB offline
+              href: /azure/dms/tutorial-mongodb-cosmos-db?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/toc.json
+            - name: Migrate MongoDB to Azure Cosmos DB's API for MongoDB online
+              href: /azure/dms/tutorial-mongodb-cosmos-db-online?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/toc.json
+            - name: Migrate Oracle to Azure Database for PostgreSQL online
+              href: /azure/postgresql/howto-migrate-from-oracle?toc=/azure/cloud-adoption-framework/toc.json&bc=/azure/cloud-adoption-framework/_bread/toc.json
+            - name: Migrate SQL Server databases to Azure
+              href: migrate/azure-best-practices/contoso-migration-sql-server-db-to-azure.md
+            - name: Rehost an application on Azure VMs and Azure SQL Managed Instance
+              href: migrate/azure-best-practices/contoso-migration-rehost-vm-sql-managed-instance.md
     - name: Innovate
       items:
       - name: Overview
