--- a/docs/scenarios/aks/toc.yml
+++ b/docs/scenarios/aks/toc.yml
@@ -38,7 +38,7 @@ items:
       items:
       - name: Start small and expand with the AKS baseline
         href: /azure/architecture/reference-architectures/containers/aks/secure-baseline-aks?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/scenarios/aks/toc.json
-      - name: Enterprise-scale for AKS
+      - name: AKS landing zone accelerator
         href: enterprise-scale-landing-zone.md
 
   - name: Migrate to modern application platforms
