--- a/docs/scenarios/azure-vmware/toc.yml
+++ b/docs/scenarios/azure-vmware/toc.yml
@@ -26,7 +26,7 @@ items:
         href: eslz-platform-automation-and-devops.md
     - name: Implementation options
       items:
-      - name: Enterprise-scale for Azure VMware Solution
+      - name: Azure VMware Solution landing zone accelerator
         href: enterprise-scale-landing-zone.md
 
   - name: Migrate Azure VMware Solution to Azure
