--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -425,8 +425,6 @@ items:
             href: ready/enterprise-scale/terraform-module-caf-enterprise-scale.md
           - name: Scenario-specific enterprise-scale landing zones
             href: ready/enterprise-scale/scenario-specific-enterprise-scale-landing-zones.md
-          - name: Enterprise-scale FAQ
-            href: ready/enterprise-scale/faq.md
 
         - name: Start small and expand
           items:
@@ -475,6 +473,9 @@ items:
             href: /azure/security/fundamentals/network-best-practices?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/toc.json
           - name: Azure operational security best practices
             href: /azure/security/fundamentals/operational-best-practices?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/toc.json
+
+    - name: Azure Landing Zone FAQ
+      href: ready/enterprise-scale/faq.md
 
     - name: Skills relevant to ready and landing zones
       href: ready/suggested-skills.md
