--- a/docs/scenarios/app-platform/toc.yml
+++ b/docs/scenarios/app-platform/toc.yml
@@ -36,7 +36,7 @@ items:
         href: aks/aks-platform-automation-and-devops.md
       - name: Reference Architecture (placeholder)
         href: aks/aks-landing-zone-accelerator.md
-      - name: Reference Implementaion (placeholder)
+      - name: Reference Implementation (placeholder)
         href: aks/aks-landing-zone-accelerator.md
     - name: Azure API Management 
       items:
@@ -58,10 +58,6 @@ items:
         href: api-management/governance.md
       - name: Platform automation and DevOps
         href: api-management/platform-automation-and-devops.md
-      - name: Reference Architecture (placeholder)
-        href: api-management/landing-zone-accelerator.md
-      - name: Reference Implementaion (placeholder)
-        href: api-management/landing-zone-accelerator.md
     - name: Azure App Service
       items:
       - name: Landing zone accelerator for App Service
@@ -84,7 +80,7 @@ items:
         href: app-services/app-services-platform-automation-and-devops.md
       - name: Reference Architecture (placeholder)
         href: app-services/app-services-landing-zone-accelerator.md
-      - name: Reference Implementaion (placeholder)
+      - name: Reference Implementation (placeholder)
         href: app-services/app-services-landing-zone-accelerator.md
 
   - name: Migrate to modern application platforms
