--- a/docs/scenarios/data-management/toc.yml
+++ b/docs/scenarios/data-management/toc.yml
@@ -103,7 +103,7 @@ items:
   - name: Architectures
     items:
     - name: Overview
-      href: ./architectures/overview-architectures.md
+      href: ../cloud-scale-analytics/architectures/overview-architectures.md
     - name: Data management landing zone
       href: ./architectures/data-management-landing-zone.md
     - name: Data landing zone
@@ -117,7 +117,7 @@ items:
         - name: Data application reference patterns
           href: ../cloud-scale-analytics/architectures/data-reference-patterns.md
     - name: Scaling the architecture
-      href: ./architectures/scaling-architectures.md
+      href: ../cloud-scale-analytics/architectures/scaling-architectures.md
     - name: Data standardization
       href: ../cloud-scale-analytics/architectures/data-standardization.md
     - name: Common Data Models
