--- a/docs/scenarios/data-management/toc.yml
+++ b/docs/scenarios/data-management/toc.yml
@@ -3,7 +3,7 @@ items:
     href: ./index.md
 
   - name: Overview
-    href: ./overview-cloud-scale-analytics.md
+    href: ../cloud-scale-analytics/overview-cloud-scale-analytics.md
   - name: Build an initial strategy
     href: ./strategy.md
   - name: Define your plan
@@ -82,14 +82,14 @@ items:
       - name: Teams
         href: ./organize-roles-and-teams.md
       - name: Roles and responsibilities
-        href: ./organize-roles-and-responsibilities.md
+        href: ../cloud-scale-analytics/organize-roles-and-responsibilities.md
       - name: Teams functions
         href: ./organize-team-functions.md
 
   - name: Manage your analytics estate
     items:
     - name: Overview
-      href: ./manage.md
+      href: ../cloud-scale-analytics/manage.md
     - name: Platform automation
       href: ../cloud-scale-analytics/manage-platform-automation-and-devops.md
     - name: Provision the platform
